# Sekiro-Tool-Manager

./: .gitignore  .nfpm.yaml  Cargo.toml  PKGBUILD  README.md  dist-workspace.toml  nfpm.yaml
.github/workflows/: package.yml  release.yml
src/: app.rs  config.rs  main.rs  manifest.rs  proton_setup.rs  theme.rs  toast.rs  tools.rs  tray.rs
src/launch/: mod.rs
src/ui/: mod.rs  progress_bar.rs  tool_card.rs
