[package]
name = "sekiro-launcher"
version = "0.1.0"
edition = "2021"
description = "A native Linux desktop app for downloading, installing, and launching speedrun tools alongside Sekiro."

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
iced_toasts = "0.1"
tray = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
env_logger = "0.11"
zip = "2"
tar = "0.4"
flate2 = "1"
log = "0.4"
dirs = "5"
sha2 = "0.10"
shellexpand = "3"
